--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,3 +47,22 @@ footer {
     background-color: #ed486f;
     border-color: #ed486f;
 }
+.serach {
+    margin-bottom:20px;
+}
+.item .panel-body {
+    height:70px;
+}
+.item .panel-heading {
+    height:250px;
+}
+.item .panel-heading img {
+    height:100%;
+    max-width:100%;
+}
+p.item-title {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
